tests/ui/macros/issue-16098.stderr
error: recursion limit reached while expanding `prob1!`
  --> $DIR/issue-16098.rs:7:18
   |
LL |             $n + prob1!($n - 1);
   |                  ^^^^^^^^^^^^^^
...
LL |     println!("Problem 1: {}", prob1!(1000));
   |                               ------------ in this macro invocation
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_16098`)
   = note: this error originates in the macro `prob1` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

